--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -1,9 +1,16 @@
 @import "tailwindcss";
 
+html {
+  /* Ensures the html element takes the full height and width of the viewport */
+  width: 100%;
+  height: 100%;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  width: 450px;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -28,7 +35,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 450px;
+  width: 450px;
   min-height: 100vh;
 }
 
@@ -48,24 +55,8 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
-.card {
-  padding: 2em;
-}
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
 @media (prefers-color-scheme: light) {
   :root {
